--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
           <button onclick="formatDoc('redo')">
             <i class="bx bx-redo"></i>
           </button>
-          <button onclick="formatDoc('bold')">
+          <button onclick="formatDoc('bold'), activeEl(this)">
             <i class="bx bx-bold"></i>
           </button>
-          <button onclick="formatDoc('underline')">
+          <button onclick="formatDoc('underline'), activeEl(this)">
             <i class="bx bx-underline"></i>
           </button>
-          <button onclick="formatDoc('italic')">
+          <button onclick="formatDoc('italic'), activeEl(this)">
             <i class="bx bx-italic"></i>
           </button>
-          <button onclick="formatDoc('strikeThrough')">
+          <button onclick="formatDoc('strikeThrough'), activeEl(this)">
             <i class="bx bx-strikethrough"></i>
           </button>
           <button onclick="formatDoc('justifyLeft')">
@@ -110,7 +110,10 @@
           <button onclick="formatDoc('insertOrderedList')">
             <i class="bx bx-list-ol"></i>
           </button>
-          <button onclick="formatDoc('insertUnorderedList')">
+          <button
+            onclick="formatDoc('insertUnorderedList')"
+            data-active="false"
+          >
             <i class="bx bx-list-ul"></i>
           </button>
 
