--- a/index.html
+++ b/index.html
@@ -83,13 +83,16 @@
           <button onclick="formatDoc('redo')">
             <i class="bx bx-redo"></i>
           </button>
-          <button onclick="formatDoc('bold'), activeEl(this)">
+          <button onclick="formatDoc('bold'), activeEl(this)" class="bold">
             <i class="bx bx-bold"></i>
           </button>
-          <button onclick="formatDoc('underline'), activeEl(this)">
+          <button
+            onclick="formatDoc('underline'), activeEl(this)"
+            class="underline"
+          >
             <i class="bx bx-underline"></i>
           </button>
-          <button onclick="formatDoc('italic'), activeEl(this)">
+          <button onclick="formatDoc('italic'), activeEl(this)" class="italic">
             <i class="bx bx-italic"></i>
           </button>
           <button onclick="formatDoc('strikeThrough'), activeEl(this)">
