--- a/index.html
+++ b/index.html
@@ -85,23 +85,24 @@
           </button>
           <button
             onclick="formatDoc('bold'),  this.classList.toggle('active')"
-            class="bold"
+            class="bold state"
           >
             <i class="bx bx-bold"></i>
           </button>
           <button
             onclick="formatDoc('underline'), this.classList.toggle('active')"
-            class="underline"
+            class="underline state"
           >
             <i class="bx bx-underline"></i>
           </button>
           <button
             onclick="formatDoc('italic'), this.classList.toggle('active')"
-            class="italic"
+            class="italic state"
           >
             <i class="bx bx-italic"></i>
           </button>
           <button
+            class="strikeThrough state"
             onclick="formatDoc('strikeThrough'), this.classList.toggle('active')"
           >
             <i class="bx bx-strikethrough"></i>
